--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 PORT=3000
-PG_DATASOURCE="user=postgres dbname=go-ex sslmode=disable password=example host=localhost port=5432"
+PG_DATASOURCE="user=postgres dbname=library sslmode=disable password=123456 host=localhost port=5432"
