--- a/.env_migrator.yaml.example
+++ b/.env_migrator.yaml.example
@@ -1,6 +1,6 @@
 DB_USERNAME: "postgres"
-DB_PASSWORD: "example"
-DB_NAME: "go-ex"
+DB_PASSWORD: "123456"
+DB_NAME: "library"
 DB_HOSTNAME: "localhost"
 DB_PORT: "5432"
 DB_TYPE: "postgres"
